--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ dependencies {
 }
 
 shadowJar {
-    archiveName = 'SoConnect.jar'
+    archiveName = 'soconnect.jar'
 }
 
 defaultTasks 'clean', 'test'
